# multipage-save

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml
src/: __main__.py  app.py  config.py  navigation.py  save_modal.py
src/assets/: cogs.css  main.css  modal.css  navigation.css  spinner.css
src/pages/page_1/: callbacks.py  layout.py
src/pages/page_2/: callbacks.py  layout.py
src/pages/page_3/: callbacks.py  layout.py
