[tool.poetry]
name = "multipage-save"
version = "0.1.0"
description = ""
authors = ["Scott Melhop <scott.melhop@cognite.com>"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.16.3"
dash-bootstrap-components = "^0.10.7"
dash-table = "^4.10.1"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
